<resources>
    <string name="app_name">La Diversite</string>
    <string name="la_diversite_title">La Diversité</string>
    <string name="ou_cadastre_se">ou cadastre-se</string>
    <string name="login">Login</string>
    <string name="cria_sua_conta">Crie sua\n conta :)</string>
    <string name="entre_com_um_e_mail_v_lido">Entre com um e-mail válido</string>
    <string name="informe_uma_senha">Informe uma senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="que_bom_n_que_voc_n_voltou">Que bom \n que você\n voltou :)</string>
    <string name="entre_com_seu_e_mail">Entre com seu e-mail</string>
    <string name="entre_com_sua_senha">Entre com sua senha</string>
    <string name="endereco_acolhida">Endereço:</string>
    <string name="p_blico_alvo">Público alvo:</string>
    <string name="nome_da_casa">Nome da casa</string>
    <string name="emerg_ncia_190">emergência 190</string>
    <string name="cadastro_ok">Cadastro efetuado com sucesso!</string>
    <string name="cadastro_nok">Falha no cadastro, tente novamente!</string>
    <string name="email_obrigatorio">E-mail deve ser preenchido!</string>
    <string name="senha_obrigatorio">Senha deve ser preenchido!</string>
    <string name="user_auth_ok">Usuário autenticado com sucesso!</string>
    <string name="user_auth_nok">Falha na autenticação!</string>
    <string name="email_valid">Digite um e-mail válido!</string>
    <string name="casa_obrig">Nome da Casa é obrigatório!</string>
    <string name="telefone_obrig">Verifique o preenchimento do telefone!</string>
    <string name="senha_valid">Senha deve conter no mínimo 6 dígitos!</string>
    <string name="endere_o">Endereço:</string>
    <string name="telefone">Telefone:</string>
    <string name="e_mail">E-mail:</string>
    <string name="servi_o_prestado">Serviço Prestado:</string>
    <string name="delegacia">Delegacia</string>
    <string name="atividades">Atividades:</string>
    <string name="telefone_delegacia">Telefone</string>
    <string name="ligando">Ligando para Delegacia…</string>
    <string name="contato_emerg_ncia">Contato de Emergência</string>
    <string name="emerg_ncia">Emergência</string>
    <string name="este_bot_o_faz_uma_liga_o_para_o_contato_de_emerg_ncia_cadastrado">Aqui você pode cadastrar, editar e excluir o seu contato de emergência.</string>
    <string name="nome">Nome</string>
    <string name="confirmar">Confirmar</string>
    <string name="atualizar">Atualizar</string>
    <string name="excluir">Excluir contato</string>
    <string name="telefone_detalhe_acolhida">Telefone:</string>
    <string name="e_mail_detalhe_acolhida">E-mail:</string>
    <string name="acolhimento_boolean">Acolhimento:</string>
    <string name="atividades_acolhida_detalhe">Atividades:</string>
    <string name="jusbrasil">JusBrasil</string>
    <string name="text_jus">A sua principal fonte de informação jurídica.</string>
    <string name="link_jus">Site: https://www.jusbrasil.com.br/legislacao</string>
    <string name="jusbrasil_url">https://jusbrasil.com.br/legislacao</string>
    <string name="psicologia_acess_vel">Psicologia Acessível</string>
    <string name="psico1_text">Diversos serviços de Terapia Gratuita, ou com preços acessíveis em São Paulo.</string>
    <string name="psico1_link">Site: https://www.psicologiasemfronteiras.com.br/p/consulta-psicologica-gratuita.html</string>
    <string name="psico_url1">https://www.psicologiasemfronteiras.com.br/p/consulta-psicologica-gratuita.html</string>
    <string name="psicologia2_acess_vel">Mundos Psicológicos</string>
    <string name="psico2_text">Encontre aqui a ajuda dos melhores especialistas em psicologia e faça terapia online, telefônica ou presencial.</string>
    <string name="psico2_link">Site: https://br.mundopsicologos.com</string>
    <string name="psico_url2">https://br.mundopsicologos.com</string>
    <string name="psicologia3_acess_vel">Doctoralia</string>
    <string name="psico3_text">Especialistas em psicologia Social.</string>
    <string name="psico3_link">Site: https://www.doctoralia.com.br/servicos-de-tratamento/psicologia-social/sao-paulo</string>
    <string name="psico_url3">https://www.doctoralia.com.br/servicos-de-tratamento/psicologia-social/sao-paulo</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="title_activity_contato_emergencia_maps">ContatoEmergenciaMapsActivity</string>
    <string name="enviar_mensagem_whatsapp">Enviar mensagem Whatsapp!</string>
    <string name="msg_whats_btn">Envia mensagem e localização para contato de emergência via WhatsApp e SMS!</string>
    <string name="msg_sms_btn">Enviar mensagem e localização para contato de emergência via SMS! *Pode gerar custos na operadora.</string>
    <string name="msg_call_btn">Faz uma chamada via operadora móvel para seu contado de emergência!</string>
    <string name="casas_de_acolhida">Casas de Acolhida</string>
    <string name="casa_de_acolhida_detalhe">Casa de Acolhida Detalhe</string>
    <string name="delegacias_especializadas">Delegacias Especializadas</string>
    <string name="leis_e_direitos">Leis e Direitos</string>
    <string name="psic_logos_e_terapeutas_de_apoio">Psicólogos e Terapeutas de Apoio</string>
    <string name="acolhimento">Acolhimento:</string>
    <string name="sugerir_nova_casa">Sugerir nova Casa</string>
    <string name="clique_nos_cards_abaixo_para_mais_detalhes_sobre_as_casas_de_acolhida">Clique nos cards abaixo para mais detalhes sobre as casas de acolhida! :)</string>
    <string name="text_call">Clique no telefone para ligar na casa de acolhida!</string>
    <string name="deleg_call">Clique no telefone para ligar na delegacia!</string>
    <string name="confirmar_aprova_o">Confirmar aprovação?</string>
    <string name="quer_mesmo_aprovar_essa_casa">Quer mesmo aprovar essa casa?</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="esta_casa_faz_acolhimento">Esta casa faz acolhimento?</string>
    <string name="nome_da_casa_acolh">*Nome da casa:</string>
    <string name="sugest_o_casa_acolhida">Sugestão Casa Acolhida</string>
    <string name="atividades_que_fazem">Atividades:</string>
    <string name="endere_o_acolh">Endereço:</string>
    <string name="p_blico_alvo_acol">Público alvo:</string>
    <string name="telefone_acol">*Telefone:</string>
    <string name="enviar_sugest_o">Enviar Sugestão</string>
    <string name="e_mail_cad">E-mail:</string>
    <string name="cadastrar_casa">Cadastrar Casa</string>
    <string name="cadastrar_nova_casa">Cadastrar nova casa</string>
    <string name="psico_txt">A população pode ser ajudada por psicólogas e psicólogos a se reestruturar cognitiva, comportamental e emocionalmente. Nos cards abaixo conheça nossos psicólogos parceiros.</string>
    <string name="nome_mayane_vilela">Nome: Mayane Vilela</string>
    <string name="crp_06_689312_is">CRP 06/689312-IS</string>
    <string name="contato_55_11_97313_5332">Contato +55 11 97313-5332</string>
    <string name="psi_mayanevilela">\@psi_MayaneVilela</string>
    <string name="nome_manuel_marins_serravale">Nome: Manuel Marins Serravale</string>
    <string name="crp_06_547144_is">CRP 06/547144-IS</string>
    <string name="contato_55_11_98699_2776">Contato: +55 11 98699-2776</string>
    <string name="rea_psicologia_preta">Área: Psicologia Preta</string>
    <string name="manuelmserravalle_psico">\@ManuelMSerravalle_psico</string>
    <string name="nome_michele_cretela">Nome: Michele Cretela</string>
    <string name="crp_06_729671_is">CRP 06/729671-IS</string>
    <string name="contato_55_11_96733_8697">Contato: +55 11 96733-8697</string>
    <string name="rea_psicologia_afirmativa">Área: Psicologia Afirmativa</string>
    <string name="michelecretela_psi">\@MicheleCretela_psi</string>
    <string name="nome_alex_amancio">Nome: Alex Amancio</string>
    <string name="crp_06_663921_is">CRP 06/663921-IS</string>
    <string name="contato_55_11_98558_2156">Contato: +55 11 98558-2156</string>
    <string name="rea_psicologia_social">Área: Psicologia Social</string>
    <string name="aamancio_psi">\@AAmancio_psi</string>
    <string name="cadastrar_casa_admin">Cadastrar Casa</string>
    <string name="cadastrar_admin_btn">Cadastrar</string>
    <string name="lei_maria_da_penha">Lei Maria da Penha</string>
    <string name="penha_lei">Sabia que existem mecanismos de proteção e assistência para ajudar a coibir a violência doméstica e familiar contra a mulher? Aqui você pode descobrir como podemos lutar juntos contra essa injustiça! \n<i><u>https://presrepublica.jusbrasil.com.br/legislacao/95552/lei–maria-da-penha-lei-11340-06</u></i></string>
    <string name="delito_lei">Sabia que é crime invadir aparelhos eletrônicos para pegar dados pessoais? Você já se protegeu contra isso? Clique aqui para entender tudo sobre a lei que protege os dados pessoais! \n<i><u>https://presrepublica.jusbrasil.com.br/legislacao/1033537/lei-12737-12#art-2</u></i></string>
    <string name="femini_lei_title">Lei do Feminicídio como\n circunstância qualificadora do\n crime de homicídio</string>
    <string name="crimes_de_delitos_inform_ticos">Crimes de Delitos Informáticos</string>
    <string name="femini_lei">Você sabia que agora o feminicídio é considerado um crime ainda mais grave? Ou seja, quando alguém mata uma mulher simplesmente por ser mulher, é considerado feminicídio. Quer entender mais sobre essa importante mudança na lei? Vem descobrir tudo sobre essa nova qualificadora!\n<i><u>https://legislacao.presidencia.gov.br/atos/?tipo=LEI&amp;numero=13104&amp;ano=2015&amp;ato=defMTS65UNVpWTacb</u></i></string>
    <string name="ado_o">Adoção</string>
    <string name="adocao_lei">Você sabia que o Estatuto da Criança e do Adolescente (ECA) não menciona a orientação sexual como critério para adoção? E mais, não diz que os futuros pais precisam ser de sexos diferentes! Na verdade, o que importa é que o casal esteja em uma união estável e comprovadamente estável. Ou seja, casais homoafetivos também são considerados uma família! Quer saber mais sobre os requisitos para adoção? Clique aqui pra acessar a lei. \n<i><u>https://www.jusbrasil.com.br/topicos/10615981/artigo-42-da-lei-n-8069-de-13-de-julho-de-1990</u></i></string>
    <string name="nome_social">Nome Social e o reconhecimento da \nidentidade de gênero de pessoas \ntravestis ou transexuais</string>
    <string name="nome_lei">Sabia que pessoas transgêneros têm direito ao uso do nome social? Desde 2016, um decreto federal garante o reconhecimento da identidade de gênero e o uso do nome social para pessoas travestis e transexuais em órgãos do governo. Quer entender mais sobre essa conquista? Aqui você pode conferir a lei sobre o direito ao nome social!\n<i><u>http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2016/decreto/D8727.htm</u></i></string>
    <string name="penha_todas">Você sabia que a Lei Maria da Penha também assegura proteção a mulheres transgênero? Desde 2006 a lei já assegurava mulheres lésbicas e bissexuais em relacionamentos homoafetivos. O Ministério Público Federal defende que mulheres trans têm direito às medidas protetivas da Lei Maria da Penha, mesmo sem ter passado por cirurgia de transgenitalização. Aqui você pode ler mais sobre ampliação dos direitos!\n<i><u>https://presrepublica.jusbrasil.com.br/legislacao/95552/lei-maria-da-penha-lei-11340-06</u></i></string>
</resources>