<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_acolhida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/ll_card_acolhida"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="2dp"
            android:paddingStart="21dp"
            android:paddingTop="15dp"
            android:paddingEnd="21dp">

            <TextView
                android:id="@+id/nome_casa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/nome_da_casa"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/endereco_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/endereco_acolhida" />

            <TextView
                android:id="@+id/endereco_acolhida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/endereco_acolhida" />


            <TextView
                android:id="@+id/publico_alvo_label_short"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/p_blico_alvo" />
            <TextView
                android:id="@+id/publico_alvo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/p_blico_alvo" />

            <TextView
                android:id="@+id/telefone_detalhe_acolhida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:visibility="gone"
                android:text="@string/telefone_detalhe_acolhida" />

            <TextView
                android:id="@+id/email_detalhe_acolhida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingBottom="15dp"
                android:text="@string/e_mail_detalhe_acolhida" />

            <TextView
                android:id="@+id/acolhimento_detalhe_acolhida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingBottom="15dp"
                android:text="@string/acolhimento_boolean" />

            <TextView
                android:id="@+id/atividades_detalhe_acolhida"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/atividades_acolhida_detalhe" />

            <TextView
                android:id="@+id/visivelToggle"
                android:layout_width="wrap_content"
                android:visibility="visible"
                tools:text="visivel"
                android:layout_height="0dp"
                android:paddingBottom="0dp"/>




        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>