<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:layout_marginBottom="20dp"
    tools:context=".presentation.AcolhidaActivity">

    <TextView
        android:id="@+id/label_contato_emergencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppinssemibold"
        android:gravity="center"
        android:text="@string/casa_de_acolhida_detalhe"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_acolhida_detalhe"
        android:layout_width="86dp"
        android:layout_height="82dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="163dp"
        android:src="@drawable/logo_acolhidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_contato_emergencia" />


    <TextView
        android:id="@+id/label_explic"
        android:layout_width="281dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/text_call"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_acolhida_detalhe" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card__detalhe_acolhida"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_acolhida_detalhe">


        <LinearLayout
            android:id="@+id/ll_card__detalhe_acolhida"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="21dp"
            android:paddingTop="15dp"
            android:paddingEnd="21dp"
            app:layout_constraintTop_toBottomOf="@+id/logo_acolhida"
            tools:layout_editor_absoluteX="31dp">

            <TextView
                android:id="@+id/nome_casa_detalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/nome_da_casa"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/endereco_detalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endere_o"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/endereco_detalhe_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/endere_o"
                 />

            <TextView
                android:id="@+id/publico_alvo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_blico_alvo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/publico_alvo_detalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/p_blico_alvo"
                 />

            <TextView
                android:id="@+id/telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/telefone_detalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:text="@string/telefone"
                />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_detalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/e_mail"
                />

            <TextView
                android:id="@+id/acolhida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acolhimento"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acolhida_detalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/acolhimento"
                />

            <TextView
                android:id="@+id/servicos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/servi_o_prestado"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/servicos_detalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/servi_o_prestado"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>